Fix scroll behavior; remove scrollbar styles

--- a/client/src/ui/css/App.css
+++ b/client/src/ui/css/App.css
@@ -179,17 +179,3 @@
 .container {
   background-color: rgba(255, 255, 255, 0);
 }
-
-::-webkit-scrollbar {
-  width: .6%;
-  padding-right: 100%;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px #ECECEC;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #807B7B;
-  border-radius: 13.5731px;
-}
