--- a/client/src/ui/css/CourseReviews.css
+++ b/client/src/ui/css/CourseReviews.css
@@ -81,18 +81,3 @@
 
   color: #0076FF;
 }
-
-.coursereviews-review-ul::-webkit-scrollbar {
-  width: 8px;
-  padding-right:8px;
-}
-
-.coursereviews-review-ul::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px #ECECEC;
-}
-
-.coursereviews-review-ul::-webkit-scrollbar-thumb {
-  background: #807B7B;
-  border-radius: 13.5731px;
-}
-
