--- a/client/src/ui/css/ResultsDisplay.css
+++ b/client/src/ui/css/ResultsDisplay.css
@@ -269,21 +269,6 @@
   height: 90%;
 }
 
-.results-classes-list::-webkit-scrollbar {
-  width: 8px;
-  padding-right: 8px;
-}
-
-.results-classes-list::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px #ECECEC;
-}
-
-.results-classes-list::-webkit-scrollbar-thumb {
-  background: #807B7B;
-  height: 332.25px;
-  border-radius: 13.5731px;
-}
-
 /* desktop*/
 @media (min-width: 1000px) {
   .results {
@@ -324,11 +309,6 @@
 
   .results-classes-list {
     padding-right: 0px;
-  }
-
-  ::-webkit-scrollbar {
-    display: none;
-    /* make scrollbar transparent */
   }
 
   .mobile-search-gradient {
